# awesomepkf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  estimate_lotka_volterra.py  pyproject.toml  requirements.txt  run_tests.sh  tutu.txt  update_readme_structure.sh
.github/workflows/: ci.yml  publish.yml
data/: clean_dirs.sh
dataGenerated/datafile/: csv_to_parquet.py  data_dim2x2.parquet
ipynb/: KF.ipynb  KF2.ipynb  readme.md  tutorial_01_getting_started.ipynb  tutorial_02_nonlinear_models.ipynb  tutorial_03_sigma_points.ipynb  tutorial_04_particle_filters.ipynb  tutorial_05_new_model_lotkavolterra.ipynb
notebooks/: tutorial_01_getting_started.ipynb  tutorial_02_nonlinear_models.ipynb  tutorial_03_sigma_points.ipynb  tutorial_04_particle_filters.ipynb  tutorial_05_new_model_lotkavolterra.ipynb  tutorial_06_filter_runner_and_config.ipynb
prg/: PKF.py  UKFSimulator.py  UPKF.py  __init__.py  exceptions.py  filterCPKFdata.py  filterCPKFdata_fromfile.py  filterEPKFdata.py  filterEPKFdata_fromfile.py  filterPFdata.py  filterPFdata_fromfile.py  filterPKFdata.py  filterPKFdata_fromfile.py  filterUPKFdata.py  filterUPKFdata_fromfile.py  run_filter.py  run_linear_pkf.py  run_nonlinear_epkf.py  run_nonlinear_pf.py  run_nonlinear_ppf.py  run_nonlinear_ukf.py  run_nonlinear_upkf.py  run_paper_section4.py  run_paper_section4_backaction.py  run_paper_section4_multip.py  run_paper_section4_sensitivity.py  run_paper_section5.py  run_paper_section5_enso.py  run_simulator.py  simulateLinearData.py  simulateNonLinearData.py  simulateNonLinearData.py.py  simulatePKFdata.py  simulateUPKFdata.py  test.sh  testErreur.py
prg/base_classes/: __init__.py  filterUPKFdata.py  filter_runner.py  filter_specs.py  linear_pkf_runner_base.py  linear_pkf_runner_from_file.py  linear_pkf_runner_simulation.py  nonlinear_epkf_runner_base.py  nonlinear_epkf_runner_from_file.py  nonlinear_epkf_runner_simulation.py  nonlinear_pf_runner_base.py  nonlinear_pf_runner_from_file.py  nonlinear_pf_runner_simulation.py  nonlinear_ppf_runner_base.py  nonlinear_ppf_runner_from_file.py  nonlinear_ppf_runner_simulation.py  nonlinear_ukf_runner_base.py  nonlinear_ukf_runner_from_file.py  nonlinear_ukf_runner_simulation.py  nonlinear_upkf_runner_base.py  nonlinear_upkf_runner_from_file.py  nonlinear_upkf_runner_simulation.py  runner_base.py  simulator_base.py  simulator_linear.py  simulator_nonlinear.py
prg/classes/: ActiveView.py  HistoryTracker.py  Linear_PKF.py  MatrixDiagnostics.py  NonLinear_CPKF.py  NonLinear_EPKF.py  NonLinear_PF.py  NonLinear_PKF.py  NonLinear_PPF.py  NonLinear_UKF.py  NonLinear_UKF_CN_Linearized.py  NonLinear_UKF_UN.py  NonLinear_UPKF.py  PKF.py  ParamLinear.py  ParamNonLinear.py  ParamPKF.py  ParamUPKF.py  SeedGenerator.py  SeedManager.py  SigmaPointsSet.py  UPKF.py  _base_particle_filter.py  history_tracker.py  linear_pkf.py  nonlinear_epkf.py  nonlinear_pf.py  nonlinear_ppf.py  nonlinear_ukf.py  nonlinear_ukf_cn_linearized.py  nonlinear_ukf_un.py  nonlinear_upkf.py  param_linear.py  pkf.py  sigma_points_set.py
prg/classes/history_tracker/: __init__.py  _core.py  _demo.py  _metrics_mixin.py  _plot_mixin.py
prg/classes/matrix_diagnostics/: __init__.py  base.py  covariance.py  invertible.py  results.py  stability.py  status.py  tolerances.py
prg/models/: Generate_MatrixCov.py  __init__.py  generMatrixA_fromVP.py  model_dimx1_dimy1.py  model_dimx2_dimy2.py  model_dimx3_dimy1.py  testLinear.py  testNonLinear.py
prg/models/PKF/: generMatrixA_fromVP.py  model_dimx1_dimy1.py  model_dimx2_dimy2.py
prg/models/UPKF/: model_dimx1_dimy1_UKF.py  model_dimx2_dimy1.py
prg/models/linear/: A_mQ_x1_y1.py  A_mQ_x1_y1_VPgreaterThan1.py  A_mQ_x1_y1_augmented.py  A_mQ_x1_y1_classic.py  A_mQ_x2_y2.py  A_mQ_x3_y1.py  Sigma_x1_y1.py  Sigma_x2_y2.py  Sigma_x3_y1.py  __init__.py  _amq.py  _base.py  _dynamics.py  _plotting.py  _sigma.py  _symbolic.py  base_model.py  base_model_linear.py  configs.py  generMatrixA_fromVP.py  linear_x1_y1.py  linear_x2_y2.py  linear_x3_y1.py  model_dimx1_dimy1.py  model_dimx3_dimy1.py  model_x1_y1_AQ_augmented.py  model_x1_y1_AQ_classic.py  model_x1_y1_AQ_pairwise.py  model_x1_y1_Sigma_pairwise.py  model_x2_y2_AQ_augmented.py  model_x2_y2_AQ_classic.py  model_x2_y2_AQ_pairwise.py  model_x2_y2_Sigma_pairwise.py  model_x3_y1_AQ_augmented.py  model_x3_y1_AQ_classic.py  model_x3_y1_AQ_pairwise.py  model_x3_y1_Sigma_pairwise.py
prg/models/nonLinear/: __init__.py  base_model.py  base_model_fxhx.py  base_model_gxgy.py  base_model_nonLinear.py  configs.py  model_cubique.py  model_dimx2_dimy1_UKF.py  model_ext_saturant.py  model_gordon.py  model_sinus.py  model_x1_y1_ExpSaturant_classic.py  model_x1_y1_LotkaVolterra_augmented.py  model_x1_y1_LotkaVolterra_pairwise.py  model_x1_y1_Retroactions.py  model_x1_y1_Retroactions_augmented.py  model_x1_y1_augmented.py  model_x1_y1_cubique_classic.py  model_x1_y1_ext_saturant_classic.py  model_x1_y1_gordon_classic.py  model_x1_y1_markov_naive.py  model_x1_y1_multiplicative.py  model_x1_y1_multiplicative_augmented.py  model_x1_y1_pairwise.py  model_x1_y1_pairwise_param.py  model_x1_y1_sinus_classic.py  model_x1_y1_withRetroaction.py  model_x1_y1_withRetroaction_augmented.py  model_x1_y1_withRetroactions.py  model_x1_y1_withRetroactions_augmented.py  model_x2_y1.py  model_x2_y1_Retroactions.py  model_x2_y1_Retroactions_augmented.py  model_x2_y1_augmented.py  model_x2_y1_classic.py  model_x2_y1_pairwise.py  model_x2_y1_rapport.py  model_x2_y1_rapport_classic.py  model_x2_y1_withRetroaction_augmented.py  model_x2_y1_withRetroactionsOfObservations.py  (+7 more)
prg/models/nonlinear/: __init__.py  _latex_helpers.py  base_model_fxhx.py  configs.py  (+11 more)
prg/others/: Utils.py  csv_to_parquet.py  geneMatriceCov.py  numerics.py  parser.py  plot_settings.py  utils.py
prg/tests/: conftest.py  test_cli.py  test_linear_pkf.py  test_models.py  test_nonlinear_filters.py  test_particle_filters.py  test_simulators.py
prg/utils/: csv_to_parquet.py  display.py  exceptions.py  generate_matrix_cov.py  io.py  metrics.py  nn_model.py  numerics.py  parser.py  plot_settings.py  utils.py
