[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesomepkf"
version = "2.1.2"
description = "Pairwise Kalman Filter (PKF) and variants (EPKF, UPKF, PPF) for linear and nonlinear state estimation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Derrode Stéphane", email = "" },
]
keywords = [
    "kalman filter",
    "pairwise kalman filter",
    "extended kalman filter",
    "unscented kalman filter",
    "particle filter",
    "state estimation",
    "nonlinear filtering",
    "bayesian filtering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "rich>=13.0",
    "chardet>=5.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
nn = [
    "torch>=2.0",
]
gui = [
    "PyQt6>=6.6",
    "tomli-w>=1.0",
    # pytest-qt requires a Qt binding at import time; pair it with PyQt6
    # so installing [dev] alone (no GUI) does not break ``pytest`` collection.
    "pytest-qt>=4.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "torch>=2.0",
    "PyQt6>=6.6",
    "tomli-w>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.4",
]

[project.scripts]
awesomepkf-simulate    = "prg.run_simulator:main"
awesomepkf-pkf         = "prg.run_linear_pkf:main"
awesomepkf-epkf        = "prg.run_nonlinear_epkf:main"
awesomepkf-upkf        = "prg.run_nonlinear_upkf:main"
awesomepkf-ukf         = "prg.run_nonlinear_ukf:main"
awesomepkf-ppf         = "prg.run_nonlinear_ppf:main"
awesomepkf-pf          = "prg.run_nonlinear_pf:main"

[project.urls]
Homepage   = "https://github.com/sderrode/awesomepkf"
Repository = "https://github.com/sderrode/awesomepkf"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade — modernise vers Python ≥ 3.10
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
    "PERF",   # perflint
    "NPY",    # numpy-specific
    "ICN",    # import conventions
    "RET",    # return-related
    "C4",     # comprehensions
]
ignore = [
    "E402",     # imports not at top — intentional in paper/section scripts
    "E702",     # multiple statements on one line — used in paper scripts and matplotlib calls
    "E501",     # line too long — géré par formatter, tolérance pour formules math
    "RUF001",   # ambiguous unicode in strings — math symbols (×, ρ) intentionnels
    "RUF002",   # idem dans docstrings
    "RUF003",   # idem dans commentaires
    "B008",     # function call in default arg — fréquent avec np.array
    "SIM108",   # ternary if/else — pas toujours plus lisible
    "PERF203",  # try/except in loop — parfois inévitable
]

[tool.ruff.lint.per-file-ignores]
"prg/tests/*" = ["B011"]                     # tests peuvent utiliser assert False
"prg/run_paper_section*.py" = ["PLR0915"]   # scripts de papier longs par nature

[tool.hatch.build.targets.wheel]
packages = ["prg"]

[tool.hatch.build.targets.sdist]
include = [
    "prg/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "data/",
    "notebooks/",
    "prg/tests/",
    ".claude/",
]
